--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,8 @@
     >
     {{ end }}
 
+    <link crossorigin="anonymous" href="/favicon.png" rel="icon">
+
     <link
       crossorigin="anonymous"
       href="app.css"
@@ -55,7 +57,6 @@
   </head>
   <body>
     <div id="app"></div>
-
     <script
       crossorigin="anonymous"
       integrity="{{ assetSRI `app.js` }}"
