Fixed Favicon Link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
     >
     {{ end }}
 
-    <link crossorigin="anonymous" href="/favicon.png" rel="icon">
+    <link crossorigin="anonymous" href="/favicon.png" rel="shortcut icon">
 
     <link
       crossorigin="anonymous"
